--- a/client/style.css
+++ b/client/style.css
@@ -1,4 +1,7 @@
 body {
+  background-image: url("../images/loom_banner.webp");
+  background-size: cover;
+  background-position: center;
   font-family: "Comfortaa", sans-serif;
 }
 
@@ -9,24 +12,31 @@ header {
   padding: 20px;
 }
 
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+}
+
 .hamburger {
-  font-size: 30px;
+  font-size: 54px;
   cursor: pointer;
 }
 
 .logo a {
   text-decoration: none;
-  font-size: 24px;
+  font-size: 54px;
   font-weight: 700;
-  color: black;
+  color: white;
+  background-color: pink;
+  border-radius: 10px;
 }
 
-.hero-banner {
-  background-image: url("../images/loom_logo.jpeg");
-  background-size: cover;
-  background-position: center;
-  width: 100%;
-  height: 300px;
+.hero-banner-container {
+  justify-content: center;
+  align-items: center;
+  height: 900px;
 }
 
 .button-section {
@@ -46,11 +56,21 @@ button {
   position: absolute;
   top: 0;
   left: -250px;
-  width: 250px;
+  width: 225px;
   height: 100%;
+  background-image: url("../images/loom_aside.png");
   background-color: #333;
   color: white;
   transition: left 0.3s ease;
+}
+
+.link-list {
+  background-color: #1679;
+  width: 70%;
+  margin-left: 10px;
+  margin-top: 50px;
+  font-size: 34px;
+  font-weight: bolder;
 }
 
 .hamburger-menu ul {
