--- a/client/style.css
+++ b/client/style.css
@@ -31,8 +31,19 @@ nav {
   font-size: 54px;
   font-weight: 700;
   color: white;
-  background-color: pink;
+  background-color: #fadadd;
+  border: 2px solid #ffeff0;
+  text-shadow: 2px 2px rgb(178, 137, 137);
   border-radius: 10px;
+  padding: 10px 20px;
+}
+
+.logo {
+  transition: transform 0.3s ease;
+}
+
+.logo.shift {
+  transform: translateX(150px);
 }
 
 .hero-banner-container {
@@ -52,6 +63,18 @@ button {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
+  background-color: #a7c7e7;
+  border: 2px solid #f0f8ff;
+  border-radius: 15px;
+  box-shadow: 0 4px 9px rgba(0, 0, 0, 0.25);
+  transition: box-shadow 0.3s ease;
+  font-family: "Comfortaa", sans-serif;
+}
+
+button:hover {
+  background-color: #fadadd;
+  border-color: #ffb6c1;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.4);
 }
 
 .hamburger-menu {
@@ -68,12 +91,17 @@ button {
 }
 
 .link-list {
-  background-color: #1679;
-  width: 70%;
-  margin-left: 10px;
+  background-color: rgba(173, 216, 230, 0.9);
+  border-radius: 15px;
+  border: 2px #333 solid;
+  width: 60%;
+  margin-left: 20px;
   margin-top: 50px;
-  font-size: 34px;
+  font-size: 24px;
   font-weight: bolder;
+  padding: 15px;
+  text-shadow: 1px 1px 1px black;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.25);
 }
 
 .hamburger-menu ul {
@@ -88,6 +116,12 @@ button {
 .hamburger-menu ul li a {
   color: white;
   text-decoration: none;
+  text-shadow: 0 1px 2px rgba(0, 0, 0, 0.4);
+  transition: text-shadow 0.3s ease;
+}
+
+.hamburger-menu ul li a:hover {
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
 }
 
 .hamburger-menu.show {
@@ -101,6 +135,7 @@ button {
   position: absolute;
   top: 20px;
   right: 20px;
+  text-shadow: 0px 0px 5px black;
 }
 
 #section-title {
