--- a/client/style.css
+++ b/client/style.css
@@ -28,12 +28,13 @@ nav {
   border: 2px solid #dcdcdc;
   border-radius: 10px;
   padding: 10px 20px;
-  transition: background-color 0.3s ease, border-color 0.3s ease;
+  box-shadow: 0 0 2px black;
+  transition: background-color 0.3s ease, border-color 0.3s ease,
+    box-shadow 0.3s ease;
 }
 
 .hamburger:hover {
-  background-color: #b3e0ff;
-  border-color: #99cfff;
+  box-shadow: 0px 0px 20px black;
 }
 
 .logo a {
