--- a/client/style.css
+++ b/client/style.css
@@ -77,7 +77,8 @@ a:focus {
   text-shadow: 2px 2px rgb(178, 137, 137);
   border-radius: 10px;
   padding: 10px 20px;
-  transition: background-color 0.3s ease, color 0.3s ease, border 0.3s ease;
+  transition: background-color 0.3s ease, color 0.3s ease,
+    border-color 0.3s ease, text-shadow 0.3s ease;
 }
 
 .logo:hover a {
@@ -267,6 +268,12 @@ button:hover {
   color: #333;
 }
 
+.stuffy-item:hover,
+.kid-item:hover,
+.fear-item:hover {
+  cursor: pointer;
+}
+
 #fear-detail,
 #kid-detail,
 #stuffy-detail {
@@ -295,6 +302,33 @@ button:hover {
   font-size: 1.2em;
   color: #666;
   margin-bottom: 8px;
+}
+
+#add-stuffy-btn,
+#add-kid-btn,
+#add-fear-btn {
+  background-color: #fadadd;
+  border: 2px solid #ffeff0;
+  text-shadow: 2px 2px rgb(178, 137, 137);
+  border-radius: 12px;
+  color: white;
+  padding: 12px 24px;
+  font-size: 18px;
+  font-weight: bold;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
+  transition: background-color 0.3s ease, box-shadow 0.3s ease,
+    border-color 0.3s ease, color 0.3s ease, text-shadow 0.3s ease;
+}
+
+#add-stuffy-btn:hover,
+#add-kid-btn:hover,
+#add-fear-btn:hover {
+  background-color: #a7c7e7;
+  border-color: #f0f8ff;
+  color: #333;
+  text-shadow: 2px 2px rgba(70, 130, 180, 0.7);
+  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.3);
 }
 
 .add-page {
