--- a/client/style.css
+++ b/client/style.css
@@ -233,10 +233,13 @@ button:hover {
 .stuffy-item,
 .kid-item,
 .fear-item {
+  position: relative;
   background-color: #a7c7e7;
   border: 2px solid #f0f8ff;
   border-radius: 15px;
   padding: 20px;
+  padding-top: 0px;
+  padding-bottom: 40px;
   margin: 10px 0;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   font-family: "Comfortaa", sans-serif;
@@ -272,6 +275,13 @@ button:hover {
 .kid-item:hover,
 .fear-item:hover {
   cursor: pointer;
+}
+
+.edit-btn {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  padding: 8px 16px;
 }
 
 #fear-detail,
