--- a/client/style.css
+++ b/client/style.css
@@ -284,6 +284,24 @@ button:hover {
   padding: 8px 16px;
 }
 
+.detail-edit-btn {
+  background-color: #a7c7e7;
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-top: 15px;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+.detail-edit-btn:hover {
+  background-color: #6495ed;
+}
+
 #fear-detail,
 #kid-detail,
 #stuffy-detail {
