--- a/client/style.css
+++ b/client/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("../images/loom_banner.webp");
+  background-image: url("/images/loom_banner.webp");
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
@@ -59,8 +59,7 @@ a:focus {
   border-radius: 10px;
   padding: 10px 20px;
   box-shadow: 0 0 2px black;
-  transition: background-color 0.3s ease, border-color 0.3s ease,
-    box-shadow 0.3s ease;
+  transition: background-color 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 .hamburger:hover {
@@ -77,8 +76,7 @@ a:focus {
   text-shadow: 2px 2px rgb(178, 137, 137);
   border-radius: 10px;
   padding: 10px 20px;
-  transition: background-color 0.3s ease, color 0.3s ease,
-    border-color 0.3s ease, text-shadow 0.3s ease;
+  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease, text-shadow 0.3s ease;
 }
 
 .logo:hover a {
@@ -132,8 +130,7 @@ button {
   border: 2px solid #f0f8ff;
   border-radius: 15px;
   box-shadow: 0 4px 9px rgba(0, 0, 0, 0.25);
-  transition: box-shadow 0.3s ease, background-color 0.3s ease,
-    border-color 0.3s ease;
+  transition: box-shadow 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
   font-family: "Comfortaa", sans-serif;
 }
 
@@ -149,7 +146,7 @@ button:hover {
   left: -250px;
   width: 225px;
   height: 100vh;
-  background-image: url("../images/loom_aside.png");
+  background-image: url("images/loom_aside.png");
   background-attachment: fixed;
   background-color: #333;
   border: solid #333;
@@ -345,8 +342,7 @@ button:hover {
   font-weight: bold;
   cursor: pointer;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.25);
-  transition: background-color 0.3s ease, box-shadow 0.3s ease,
-    border-color 0.3s ease, color 0.3s ease, text-shadow 0.3s ease;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease, border-color 0.3s ease, color 0.3s ease, text-shadow 0.3s ease;
 }
 
 #add-stuffy-btn:hover,
